# atomicswap

./: .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml
.github/workflows/: run_tests.yaml  run_tests_arm.yaml
src/atomicswap/: __init__.py  linux.py  macos.py  posix_ish.py  windows.py
test/: test_swap.py
