[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomicswap"
version = "0.1.2"
authors = [
  { name="Nicko van Someren", email="nicko@nicko.org" },
]
description = "A simple API to swap two files on a filesystem atomically"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/nickovs/atomicswap"
"Bug Tracker" = "https://github.com/nickovs/atomicswap/issues"
