[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomicswap"
authors = [
  { name="Nicko van Someren", email="nicko@nicko.org" },
]
dynamic = ["version"]

description = "A simple API to swap two files on a filesystem atomically"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['pywin32; sys_platform == "win32"']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[tool.setuptools.dynamic]
version = {attr = "atomicswap.__version__"}

[project.urls]
"Homepage" = "https://github.com/nickovs/atomicswap"
"Bug Tracker" = "https://github.com/nickovs/atomicswap/issues"
